# flow-ai-platform

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SETUP.md  docker-compose.yml  flow-ai-complete-development-prompt.md
.github/workflows/: ci.yml
.specify/: agent-builder-system.md  ios-development-plan.md  plan.md  project-agent-system.md  spec.md  tasks.md
backend/: Dockerfile.dev  alembic.ini  pyproject.toml  requirements.txt  run_dev.py
backend/alembic/: env.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  router.py
backend/src/api/v1/endpoints/: __init__.py  auth.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
backend/src/middleware/: __init__.py  logging.py  security.py
backend/src/schemas/: __init__.py  auth.py
backend/src/services/: __init__.py  auth.py
monitoring/: prometheus.yml
